[ozone/drm/mojo]: Correctly bound CHECK for same-thread init

Ozone/drm/mojo assumes when running in single-process mode on one thread
that the UI portion will be initialized before the GPU portion.
CHECK this only in the single thread case instead of (wrongly) checking
it in the single-process case as well.

BUG=866263
TEST=by-hand with wait insertion with and without check change.

Change-Id: I0029ac81f23c11153d8e2e027f7003f7f616af11
Reviewed-on: https://chromium-review.googlesource.com/1150845
Commit-Queue: Robert Kroeger <rjkroege@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578303}
Former-commit-id: 3a205cad436e354061f92f7b82411cbd7b250726